# 2D-Game-Engine

./: .gitignore  CMakeLists.txt  README.md  build.ps1  main.c  setup.bat  vcpkg.json
include/: core.h  engine_io.h  python_integration.h  script_engine.h  ui.h  visual_editor.h
scripts/: build.ps1  setup.bat
src/: core.c  engine_api.c  file_io.c  main.c  python_integration.c  script_engine.c  ui.c  visual_editor.c
